<resources>
    <string name="app_name">More Movies</string>
    <string name="MT">Movie Title</string>
    <string name="MThint">Enter movie title here</string>
    <string name="Gen">Genre</string>
    <string name="Genhint">Enter genre here</string>
    <string name="Year">Year</string>
    <string name="Yrhint">Enter year of release here</string>
    <string name="Rating">Rating</string>
    <string name="btnInsert">INSERT</string>
    <string name="btnShow">SHOW LIST</string>
    <string-array name="spinnerItem">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
    <string name="btnUpdate">UPDATE</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnCancel">CANCEL</string>
    <string name="id">Movie ID</string>
    <string name="btnShowAll">SHOW ALL PG-13 MOVIES</string>
</resources>