<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="24dp"
            android:padding="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tvMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/MT"
            android:textSize="24dp"
            android:padding="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etMovieTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/MThint"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Year"
            android:padding="10dp"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Yrhint"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tvGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gen"
            android:textSize="24dp"
            android:padding="10dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Genhint"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rating"
            android:textSize="24dp"
            android:padding="10dp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/spinnerItem"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnUpdate"
                android:textColor="@color/black"
                android:backgroundTint="#B3446C"
                app:cornerRadius="5dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnDelete"
                android:textColor="@color/black"
                android:backgroundTint="#B3446C"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:textColor="@color/black"
            android:backgroundTint="#B3446C"
            app:cornerRadius="5dp" />

    </LinearLayout>

</LinearLayout>